--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Angular "function-plot" template</title>
+	<title>OI labs</title>
 	<base href="/">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="favicon.ico" rel="icon" type="image/x-icon">
